# neuro-geometrica_multi-agente

./: .gitignore  Cargo.toml  README.md
data/: cdt_rqm_blank_gemma_boundary_concept.cdt_rqm  cdt_rqm_consolidated_from_snga.cdt_rqm  cdt_rqm_epr_dvali_extended_kept.cdt_rqm  cdt_rqm_epr_small_resume_test.cdt_rqm  cdt_rqm_epr_small_sleep.cdt_rqm  cdt_rqm_evolutionary_kept.cdt_rqm  cdt_rqm_infinite_concepts.cdt_rqm  chat_memory.txt  native_curriculum_5phase.cdt_native  native_thermo_clean.cdt_native  snga_fractal_multiregion_substrate.regions.txt  snga_fractal_semantic_executive_substrate.regions.txt  snga_hybrid_rqf_relational.rqf  snga_semantic_executive_console_teachings.tsv
docs/: paper.md  unified_spin_cognitive_engine.md
src/: cdt_graphity.rs  cdt_rqm.rs  cdt_rqm_experimental.rs  cognitive_logistics.rs  cognitive_os.rs  emergent_cognition_training.rs  engine_comparison.rs  entanglement.rs  geometry.rs  lib.rs  linguistic_engine.rs  main.rs  matrix_free_cognitive_substrate.rs  mesh_engine.rs  multimodal.rs  native_checkpoint.rs  native_gemma2.rs  native_plastic_symmetry_network.rs  native_thermo_rqm_epr.rs  native_thermodynamic_cdt.rs  native_thermodynamic_engine.rs  oxicuda_peps3d_backend.rs  oxicuda_pyrochlore_backend.rs  plasticity_controller.rs  pyrochlore_graph_tensor_network.rs  quantum_spin_thermodynamic_engine.rs  relational_field.rs  relational_guidance.rs  render.rs  residue_budget.rs  residue_vacuum_bridge.rs  residue_vacuum_fluctuation.rs  simplicial.rs  simplicial_thermodynamic_engine.rs  substrate_adapter.rs  symmetry_guided_rqm_epr.rs  thermo_router.rs  (+4 more)
