[package]
name = "cdt_rqm_epr"
version = "0.1.0"
edition = "2021"
description = "Motor termodinamico nativo CDT-RQM-EPR: hardware termico, software relacional y EPR computacional"
license = "MIT"

[dependencies]
candle-core = "0.11.0"
candle-nn = "0.11.0"
candle-transformers = "0.11.0"
macroquad = "0.4.15"
num-complex = "0.4.6"
oxicuda-tn = "0.5.0"
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }
